More alignment fixes on TWCC page.

--- a/docs/css/twcc.css
+++ b/docs/css/twcc.css
@@ -11,3 +11,15 @@ li.past-performance {
   color: #606060; 
   padding-bottom: 10px;
 }
+
+li.section {
+  list-style-type: none;
+  font-weight: bold;
+  padding-top: 15px;
+  text-align: center;
+}
+
+li.member-name {
+  list-style-type: none;
+  text-align: center;
+}
